# nomad-simulations

./: .cruft.json  .gitignore  404.html  CITATION.cff  Dockerfile  README.md  coverage.txt  index.html  mkdocs.yml  nomad.yaml  plots.py  pyproject.toml  requirements_docs.txt  thermodynamics.py
.github/workflows/: actions.yaml  actions.yml  coveralls.yml  cruft-update.yml  mkdocs-deploy.yml  publish.yml
contact/: index.html
docs/: contact.md  general.md  howto_use.md  index.md  normalize.md
docs/model_method/: basis_set.md  basis_sets.md  model_method.md
docs/model_system/: model_system.md
docs/outputs/: outputs.md
docs/references/: atoms_state.md  basis_set.md  general.md  model_method.md  model_system.md  numerical_settings.md  outputs.md  physical_property.md  variables.md
docs/references/properties/: band_gap.md  band_structure.md  energies.md  fermi_surface.md  forces.md  greens_function.md  hopping_matrix.md  permittivity.md  spectral_profile.md  thermodynamics.md
docs/references/utils/: utils.md
docs/stylesheets/: extra.css
general/: index.html
howto_use/: index.html
model_method/model_method/: index.html
model_system/model_system/: index.html
normalize/: index.html
outputs/outputs/: index.html
properties/: __init__.py  band_gap.py  band_structure.py  energies.py  fermi_surface.py  forces.py  hopping_matrix.py  permittivity.py  spectral_profile.py
scripts/: generate_coverage_txt.sh
search/: search_index.json
simulationdataschema/: __init__.py  atom_state.py  atoms_state.py  common.py  general.py  model_method.py  model_system.py  model_system_review.py  nomad_plugin.yaml  outputs.py  system.py
simulationdataschema/utils/: __init__.py  utils.py
src/: __init__.py
src/nomad_simulations/: __init__.py  atoms_state.py  common.py  energies.py  force_field.py  general.py  model_method.py  model_system.py  molecular.py  nomad_plugin.yaml  numerical_settings.py  outputs.py  outputs_BM.py  outputs_JFR_temp.py  outputs_MD_temp.py  physical_property.py  property.py  schema.py  spectral_profile.py  test_direct.py  thermodynamics.py  variables.py
src/nomad_simulations/properties/: __init__.py  band_gap.py  band_structure.py  energies.py  fermi_surface.py  forces.py  hopping_matrix.py  mechanics.py  permittivity.py  spectral_profile.py  thermodynamics.py
src/nomad_simulations/schema/: __init__.py  atoms_state.py  general.py  model_method.py  model_system.py  numerical_settings.py  outputs.py  physical_property.py  variables.py
src/nomad_simulations/schema/properties/: __init__.py  band_gap.py  band_structure.py  energies.py  fermi_surface.py  hopping_matrix.py  permittivity.py  spectral_profile.py
src/nomad_simulations/schema_packages/: __init__.py  atoms_state.py  basis_set.py  force_field.py  general.py  model_method.py  model_system.py  numerical_settings.py  outputs.py  particles_state.py  physical_property.py  variables.py
src/nomad_simulations/schema_packages/properties/: __init__.py  band_gap.py  band_structure.py  energies.py  fermi_surface.py  forces.py  greens_function.py  hopping_matrix.py  mechanics.py  permittivity.py  spectral_profile.py  thermodynamics.py
src/nomad_simulations/schema_packages/utils/: __init__.py  utils.py
src/nomad_simulations/schema_packages/workflow/: __init__.py  base_sections.py  base_workflows.py  dft_plus_tb.py  single_point.py
src/nomad_simulations/schema_sections/: __init__.py  model_method.py  outputs.py
src/nomad_simulations/utils/: __init__.py  config_tolerances.py  utils.py
src/nomad_simulations_data/: __init__.py
src/nomad_simulations_data/schema_sections/properties/: band_gap.py  hopping_matrix.py  spectral_profile.py
src/nomad_simulations_data/schema_sections/utils/: __init__.py
tests/: __init__.py  conftest.py  test_atoms_state.py  test_band_gap.py  test_band_structure.py  test_basis_set.py  test_energies.py  test_fermi_surface.py  test_force_field.py  test_forces.py  test_general.py  test_greens_function.py  test_hierarchy_handler.py  test_hopping_matrix.py  test_model_method.py  test_model_system.py  test_numerical_settings.py  test_outputs.py  test_permittivity.py  test_physical_properties.py  test_spectral_profile.py  test_system.py  test_template.py  test_thermodynamics.py  test_utils.py  test_variables.py  test_workflow.py
tests/properties/: test_band_gap.py  test_band_structure.py  test_energies.py  test_fermi_surface.py  test_forces.py  test_greens_function.py  test_hopping_matrix.py  test_permittivity.py  test_spectral_profile.py
tests/utils/: test_utils.py
tests/workflow/: __init__.py  test_base_workflows.py  test_dft_plus_tb.py  test_single_point.py  test_workflow.py
utils/: __init__.py  hierarchy_handler.py
